--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -8,6 +8,13 @@
 }
 .selectedPage{
     font-weight: bold;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.notSelectedPage{
+
+    margin-left: 5px;
+    margin-right: 5px;
 }
 .userContainer{
     display: flex;
