--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -1,6 +1,16 @@
 .usersPage{
+    margin-top: 15px;
+    margin-right: auto;
+    margin-left: auto;
     display: flex;
     flex-wrap: wrap;
+    width: fit-content;
+}
+.usersPage button{
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 50px;
+
 }
 .selectedPage{
     font-weight: bold;
